# Media-player

./: .gitignore  README.md  main.py  pyproject.toml
audio_player/: audio.py
docs/: Documentation.md
src/: audio.py  main.py  video.py
tests/: test_1.py
video_player/: video.py
