[tool.poetry]
name = "media-player"
version = "0.1.0"
description = "A simple media player using tkinter for GUI, video playback, and pygame for audio."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tkinter = "*"
pygame = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"